== In Git

=== New features
* Added a Tcl example using Sam Stephenson's ruby-tcl (Aslak Hellesøy)
* Added * as a synonym for Given/When/Then/And/But (for all i18n languages). (#462 Aslak Hellesøy)
* The HTML formatter produces a much nicer report, with TextMate link integration. (Rob Aldred)

=== Changed Features
* Per-word trailing-space setting for step keywords using '<'.  See 'fr' in languages.yml for example. (#525 Gregory Hnatiuk)
* --language is deprecated and will be removed in 0.5.0: http://wiki.github.com/aslakhellesoy/cucumber/spoken-languages (Aslak Hellesøy)
* Formatters will no longer be passed File objects. They must use ensure_io, ensure_file or ensure_dir. (Aslak Hellesøy)

=== Bugfixes
* Make #element_at / #table_at work on Webrat 0.6.0. This is now deprecated it in favour of #tableish from the cucumber-rails gem. (Aslak Hellesøy)
* JUnit formatter not handling multiline table steps inside Scenario Outlines (#538 Matt Wynne)
* Pending in scenario outline is red (#399 Matt Wynne)
* Allow optional step arguments to play happily with step transforms (Rob Holland)
* Regex escape the path when filtering the backtrace (Corey Donohoe & Simon Rozet)

=== Removed Features
* All Rails-related code is in a separate gem: cucumber-rails. Install that if you're working with Rails. (#483 Aslak Hellesøy)

== 0.4.4 2009-11-13

What a bad day to make a release, but here goes.

=== New features
* Cucumber should use ActiveSupport::Callbacks for fixtures (#516 Adam Salter)
* Make 'I' optional in all webrat steps. (Gavin Hughes)
* Make generated cucumber.rake work with a vendored gem (Alex Rothenberg)
* Native support for ANSIColor on IronRuby via the iron-term-ansicolor gem (Will Green)
* Call a bunch of steps from step definitions - also with tables or pystrings. Copy-paste friendly (Bodaniel Jeanes, Jack Chen, Aslak Hellesøy)

=== Bugfixes
* Pretty printer fails when expanding scenario outlines with -x when the background includes a table (#515 Mike Sassak)